Got Text View to work in the chat fragment. Next will add action bar and separate (new) chating per contact.

--- a/FragmentDemo/res/values/strings.xml
+++ b/FragmentDemo/res/values/strings.xml
@@ -22,4 +22,5 @@ limitations under the License.
     <string name="contact_list">Who is online?</string>
     <string name="button_send">Send</string>
     <string name="edit_message">Type Something</string>
+    <string name="temp_text">text goes here</string>
 </resources>
