Stuff happened. I think it is a god time to save. Some stuff has been added that has not yet been tested or has not been made accessible.

--- a/FragmentDemo/res/values/strings.xml
+++ b/FragmentDemo/res/values/strings.xml
@@ -16,11 +16,17 @@ limitations under the License.
 -->
 
 <resources>
-    <string name="app_name">Fragment Basics</string>
-    <string name="article_1">Excepteur pour-over occaecat squid biodiesel umami gastropub, nulla laborum salvia dreamcatcher fanny pack. Ullamco culpa retro ea, trust fund excepteur eiusmod direct trade banksy nisi lo-fi cray messenger bag. Nesciunt esse carles selvage put a bird on it gluten-free, wes anderson ut trust fund twee occupy viral. Laboris small batch scenester pork belly, leggings ut farm-to-table aliquip yr nostrud iphone viral next level. Craft beer dreamcatcher pinterest truffaut ethnic, authentic brunch. Esse single-origin coffee banksy do next level tempor. Velit synth dreamcatcher, magna shoreditch in american apparel messenger bag narwhal PBR ennui farm-to-table.</string>
-    <string name="article_2">Vinyl williamsburg non velit, master cleanse four loko banh mi. Enim kogi keytar trust fund pop-up portland gentrify. Non ea typewriter dolore deserunt Austin. Ad magna ethical kogi mixtape next level. Aliqua pork belly thundercats, ut pop-up tattooed dreamcatcher kogi accusamus photo booth irony portland. Semiotics brunch ut locavore irure, enim etsy laborum stumptown carles gentrify post-ironic cray. Butcher 3 wolf moon blog synth, vegan carles odd future.</string>
+
+    <string name="app_name">RSO Chat App</string>
     <string name="contact_list">Who is online?</string>
     <string name="button_send">Send</string>
     <string name="edit_message">Type Something</string>
     <string name="temp_text">text goes here</string>
+    <string name="title_activity_full_screen_chat">FullScreenChatActivity</string>
+    <string name="action_settings">Settings</string>
+    <string name="hello_world">Hello world!</string>
+    
+    <string name="ui_menu_send">Send</string>
+    <string name="ui_menu_search">Search</string>
+
 </resources>
