--- a/FragmentDemo/res/values/strings.xml
+++ b/FragmentDemo/res/values/strings.xml
@@ -12,7 +12,7 @@ Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
-limitations under the License.
+limitations under the License.
 -->
 
 <resources>
@@ -25,8 +25,11 @@ limitations under the License.
     <string name="title_activity_full_screen_chat">FullScreenChatActivity</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
-    
     <string name="ui_menu_send">Send</string>
     <string name="ui_menu_search">Search</string>
+    <string name="title_activity_logon">Log in</string>
+    <string name="logon_prompt">Please log on</string>
+    <string name="cont">Continue</string>
+    <string name="username">Username</string>
 
 </resources>
