Stuff is broken. Need to show that there are different fragments per contact. I'm working on it.

--- a/FragmentDemo/res/values/strings.xml
+++ b/FragmentDemo/res/values/strings.xml
@@ -31,5 +31,6 @@ limitations under the License.
     <string name="logon_prompt">Please log on</string>
     <string name="cont">Continue</string>
     <string name="username">Username</string>
+    <string name="ui_menu_user">Change User</string>
 
 </resources>
