--- a/ChatAppVersion1/res/values/strings.xml
+++ b/ChatAppVersion1/res/values/strings.xml
@@ -31,7 +31,7 @@ limitations under the License.
     <string name="logon_prompt">Please log on</string>
     <string name="cont">Continue</string>
     <string name="username">Username</string>
-    <string name="ui_menu_user">Change User</string>
+    <string name="ui_menu_user">Change Username</string>
     <string name="title_activity_add_user_dialog_fragment">AddUserDialogFragment</string>
     <string name="add_user_prompt">Add User</string>
     <string name="title_activity_remove_user_dialog_fragment">RemoveUserDialogFragment</string>
