--- a/SSAgui/res/values/strings.xml
+++ b/SSAgui/res/values/strings.xml
@@ -5,10 +5,10 @@
     
     <string name="drawer_open">Open navigation drawer</string>
     <string name="drawer_close">Close navigation drawer</string>
-    <string name="action_websearch">Web search</string>
+    <string name="action_websearch">Search</string>
     <string name="app_not_available">Sorry, there\'s no web browser available</string>
     
-    <string name="action_addsate">New Satellite</string>
+    <string name="action_addsate">New/Update RSO</string>
     <string name="action_resetloc">Reset Location</string>
     <string name="add_satename">Satellite Name</string>
     <string name="add_satenumber">SATCAT Number</string>
